--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,14 @@
 			<artifactId>jersey-client</artifactId>
 			<version>${jersey2.version}</version>
 		</dependency>
+		<!-- J-unit 4.12 -->
+		<!-- https://mvnrepository.com/artifact/junit/junit -->
+		<dependency>
+		    <groupId>junit</groupId>
+		    <artifactId>junit</artifactId>
+		    <version>4.12</version>
+		    <scope>test</scope>
+		</dependency>
 	</dependencies>
 	<build>
 		<sourceDirectory>src/main/java</sourceDirectory>
