--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,7 @@
 	<groupId>com.crusnikeratelier.oauth2</groupId>
 	<artifactId>com.crusnikeratelier.oauth2</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>war</packaging>
 	
 	<name></name>
 	
@@ -12,6 +13,24 @@
 		<jaxrs.version>2.0.1</jaxrs.version>
 	</properties>
 	<dependencies>
+		<!-- logging Libs -->
+		<dependency>
+	    	<groupId>org.apache.logging.log4j</groupId>
+	    	<artifactId>log4j-api</artifactId>
+	    	<version>2.9.0</version>
+	  	</dependency>
+	  	<dependency>
+	   		<groupId>org.apache.logging.log4j</groupId>
+	    	<artifactId>log4j-core</artifactId>
+	    	<version>2.9.0</version>
+	  	</dependency>
+		<!-- Servlet 4 -->
+		<dependency>
+    		<groupId>javax.servlet</groupId>
+    		<artifactId>javax.servlet-api</artifactId>
+    		<version>4.0.0</version>
+    		<scope>provided</scope>
+		</dependency>
 		<!-- JAX-RS -->
 		<dependency>
 			<groupId>javax.ws.rs</groupId>
