--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -18,7 +18,7 @@
     <param-value>java:comp/env/jdbc/datasource</param-value>
   </context-param>
   <listener>
-    <listener-class>com.crusnikatelier.oauth2.listener.LiquibaseListener</listener-class>
+    <listener-class>liquibase.integration.servlet.LiquibaseServletListener</listener-class>
   </listener>
   <listener>
   	<listener-class>com.crusnikatelier.oauth2.listener.HibernateListener</listener-class>
