--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.crusnikeratelier.oauth2</groupId>
@@ -26,13 +27,15 @@
 			<artifactId>log4j-core</artifactId>
 			<version>2.9.0</version>
 		</dependency>
-		<!-- Servlet 4 -->
+
+		<!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>javax.servlet-api</artifactId>
-			<version>4.0.0</version>
+			<version>3.1.0</version>
 			<scope>provided</scope>
 		</dependency>
+
 
 		<!-- JAX-RS -->
 		<dependency>
@@ -125,7 +128,7 @@
 						</resource>
 					</webResources>
 					<webXml>WebContent/WEB-INF/web.xml</webXml>
-<!-- 					<webXml>WebContent/WEB-INF/web.xml</webXml> -->
+					<!-- <webXml>WebContent/WEB-INF/web.xml</webXml> -->
 				</configuration>
 			</plugin>
 		</plugins>
