--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,12 @@
 	</properties>
 
 	<dependencies>
+		<!-- https://mvnrepository.com/artifact/org.springframework/spring-context -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context</artifactId>
+			<version>5.0.3.RELEASE</version>
+		</dependency>
 		<!-- logging Libs -->
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
@@ -112,8 +118,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.3</version>
 				<configuration>
-					<source>1.7</source>
-					<target>1.7</target>
+					<source>1.8</source>
+					<target>1.8</target>
 				</configuration>
 			</plugin>
 			<plugin>
