--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -7,12 +7,8 @@
 	<display-name>com.crusnikeratelier.oauth2</display-name>
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
-		<welcome-file>index.htm</welcome-file>
-		<welcome-file>index.jsp</welcome-file>
-		<welcome-file>default.html</welcome-file>
-		<welcome-file>default.htm</welcome-file>
-		<welcome-file>default.jsp</welcome-file>
 	</welcome-file-list>
+	
 	<context-param>
 		<param-name>liquibase.changelog</param-name>
 		<param-value>changelogs/changelog.xml</param-value>
@@ -21,18 +17,32 @@
 		<param-name>liquibase.datasource</param-name>
 		<param-value>java:comp/env/jdbc/datasource</param-value>
 	</context-param>
+	<context-param>
+		<param-name>liquibase.host.exludes</param-name>
+		<param-value></param-value>
+	</context-param>
+	<context-param>
+		<param-name>liquibase.onerror.fail</param-name>
+		<param-value>false</param-value>
+	</context-param>
+	<context-param>
+		<param-name>liquibase.contexts</param-name>
+		<param-value>production</param-value>
+	</context-param>
+	
 	<listener>
 		<listener-class>liquibase.integration.servlet.LiquibaseServletListener</listener-class>
 	</listener>
 	<listener>
-		<listener-class>com.crusnikatelier.oauth2.listener.HibernateListener</listener-class>
+		<listener-class>com.cruat.oauth.listener.HibernateListener</listener-class>
 	</listener>
+	
 	<servlet>
 		<servlet-name>jersey-serlvet</servlet-name>
 		<servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
 		<init-param>
 			<param-name>jersey.config.server.provider.packages</param-name>
-			<param-value>com.crusnikeratelier.oauth2.rest</param-value>
+			<param-value>com.cruat.oauth.rest</param-value>
 		</init-param>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
@@ -40,8 +50,9 @@
 		<servlet-name>jersey-serlvet</servlet-name>
 		<url-pattern>/rest/*</url-pattern>
 	</servlet-mapping>
+
 	<resource-ref>
-		<description>Datsource</description>
+		<description>Data source</description>
 		<res-ref-name>jdbc/datasource</res-ref-name>
 		<res-type>javax.sql.DataSource</res-type>
 		<res-auth>Container</res-auth>
