--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -31,7 +31,7 @@
     <listener-class>com.cruat.oauth.listener.HibernateListener</listener-class>
   </listener>
   <listener>
-  	<listener-class>com.cruat.oauth.listener.SpringStartupListener</listener-class>
+  	<listener-class>com.cruat.oauth.listener.SpringListener</listener-class>
   </listener>
   
   
