--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,57 +1,60 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" version="3.1">
-  <display-name>com.crusnikeratelier.oauth2</display-name>
-  <welcome-file-list>
-    <welcome-file>index.html</welcome-file>
-  </welcome-file-list>
-  <context-param>
-    <param-name>liquibase.changelog</param-name>
-    <param-value>changelogs/changelog.xml</param-value>
-  </context-param>
-  <context-param>
-    <param-name>liquibase.datasource</param-name>
-    <param-value>java:comp/env/jdbc/datasource</param-value>
-  </context-param>
-  <context-param>
-    <param-name>liquibase.host.exludes</param-name>
-    <param-value></param-value>
-  </context-param>
-  <context-param>
-    <param-name>liquibase.onerror.fail</param-name>
-    <param-value>false</param-value>
-  </context-param>
-  <context-param>
-    <param-name>liquibase.contexts</param-name>
-    <param-value>production</param-value>
-  </context-param>
-  <listener>
-    <listener-class>liquibase.integration.servlet.LiquibaseServletListener</listener-class>
-  </listener>
-  <listener>
-    <listener-class>com.cruat.oauth.listener.HibernateListener</listener-class>
-  </listener>
-  <listener>
-  	<listener-class>com.cruat.oauth.listener.SpringListener</listener-class>
-  </listener>
-  
-  
-  <servlet>
-    <servlet-name>jersey-serlvet</servlet-name>
-    <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
-    <init-param>
-      <param-name>jersey.config.server.provider.packages</param-name>
-      <param-value>com.cruat.oauth.rest</param-value>
-    </init-param>
-    <load-on-startup>1</load-on-startup>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>jersey-serlvet</servlet-name>
-    <url-pattern>/rest/*</url-pattern>
-  </servlet-mapping>
-  <resource-ref>
-    <description>Data source</description>
-    <res-ref-name>jdbc/datasource</res-ref-name>
-    <res-type>javax.sql.DataSource</res-type>
-    <res-auth>Container</res-auth>
-  </resource-ref>
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xmlns="http://xmlns.jcp.org/xml/ns/javaee"
+	xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
+	version="3.1">
+	<display-name>com.crusnikeratelier.oauth2</display-name>
+	<welcome-file-list>
+		<welcome-file>index.html</welcome-file>
+	</welcome-file-list>
+	<context-param>
+		<param-name>liquibase.changelog</param-name>
+		<param-value>changelogs/changelog.xml</param-value>
+	</context-param>
+	<context-param>
+		<param-name>liquibase.datasource</param-name>
+		<param-value>java:comp/env/jdbc/datasource</param-value>
+	</context-param>
+	<context-param>
+		<param-name>liquibase.host.exludes</param-name>
+		<param-value></param-value>
+	</context-param>
+	<context-param>
+		<param-name>liquibase.onerror.fail</param-name>
+		<param-value>false</param-value>
+	</context-param>
+	<context-param>
+		<param-name>liquibase.contexts</param-name>
+		<param-value>production</param-value>
+	</context-param>
+	<listener>
+		<listener-class>liquibase.integration.servlet.LiquibaseServletListener</listener-class>
+	</listener>
+	<listener>
+		<listener-class>com.cruat.oauth.listener.HibernateListener</listener-class>
+	</listener>
+	<listener>
+		<listener-class>com.cruat.oauth.listener.SpringListener</listener-class>
+	</listener>
+
+	<servlet>
+		<servlet-name>dispatcher</servlet-name>
+		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+		<init-param>
+			<param-name>contextConfigLocation</param-name>
+			<param-value>com.cruat.oauth.rest</param-value>
+		</init-param>
+		<load-on-startup>1</load-on-startup>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>dispatcher</servlet-name>
+		<url-pattern>/rest/*</url-pattern>
+	</servlet-mapping>
+
+	<resource-ref>
+		<description>Data source</description>
+		<res-ref-name>jdbc/datasource</res-ref-name>
+		<res-type>javax.sql.DataSource</res-type>
+		<res-auth>Container</res-auth>
+	</resource-ref>
 </web-app>
